ensure very long urls do not cause wrapping issues

--- a/styles/scss/components/Comment.scss
+++ b/styles/scss/components/Comment.scss
@@ -72,6 +72,7 @@
   {
     margin-top: $gutter/2;
     word-wrap: anywhere;
+    word-break: normal;
     white-space: pre-wrap;
   }
 }
