--- a/styles/scss/components/Description.scss
+++ b/styles/scss/components/Description.scss
@@ -7,6 +7,7 @@
     text-overflow: ellipsis;
     overflow: hidden;
     word-wrap: anywhere;
+    word-break: normal;
     white-space: pre-wrap;
     padding: $gutter/2 0;
 
